--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ bin/
 
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+
+\.idea/gradle\.xml
+
+\.idea/workspace\.xml
+
+\.idea/
+
+Reset2018\.iml
