--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,12 @@ deploy {
     }
 }
 
-repositories {	jcenter() }
-
+// Defining my dependencies. In this case, WPILib (+ friends), CTRE Toolsuite (Talon SRX)
+// and NavX.
 dependencies {
     compile wpilib()
     compile ctre()
     compile navx()
-    testCompile "junit:junit:4.11"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
