Update .gitignore and add .travis.yml
Add the .idea/ and out/ folders to .gitignore to cover intelliJ, add
*.swp to cover vim tmp files. Also add a .travis.yml, experimenting with
Travis CI. Added the Travis CI build status icon to the readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
 
+# IDE files
+.idea/
+out/
+*.swp
+
 ### C++ ###
 # Prerequisites
 *.d
